test/asm/bracketed-symbols.out
ERROR: bracketed-symbols.asm(16):
    Print types are only allowed for numbers
ERROR: bracketed-symbols.asm(20):
    Expression must have a constant value
$2A
2a
2A
42
101010
10100111001
0
You can't format me!
